--- a/index.html
+++ b/index.html
@@ -1,34 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Social links profile</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    <title>Frontend Mentor | Social links profile</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<main>
+    <article class="article">
+        <header class="article__header">
+            <div class="article__header__main">
+                <h1>Jessica Randall</h1>
+                <p>London, United Kingdom</p>
+            </div>
+            <p class="article__header__bio">"Front-end developer and avid reader."</p>
 
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
+            <img class="article__header__image" src="./assets/images/avatar-jessica.jpeg" alt="">
+        </header>
 
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+        <section class="article__section">
+            <h2 class="visually-hidden">Social links</h2>
+
+            <ul class="article__links">
+                <li><a class="button" href="">GitHub</a></li>
+                <li><a class="button" href="">Frontend Mentor</a></li>
+                <li><a class="button" href="">LinkedIn</a></li>
+                <li><a class="button" href="">Twitter</a></li>
+                <li><a class="button" href="">Instagram</a></li>
+            </ul>
+        </section>
+    </article>
+</main>
 </body>
 </html>
