--- a/index.html
+++ b/index.html
@@ -1,41 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
 
     <title>Frontend Mentor | Social links profile</title>
 
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<main>
-    <article class="article">
-        <header class="article__header">
-            <div class="article__header__main">
-                <h1>Jessica Randall</h1>
-                <p>London, United Kingdom</p>
-            </div>
-            <p class="article__header__bio">"Front-end developer and avid reader."</p>
+    <link rel="stylesheet" href="/styles/app.css" />
+  </head>
+  <body>
+    <main class="main card">
+      <div class="card__header">
+        <h1 class="card__title">Jessica Randall</h1>
+        <p class="card__location">London, United Kingdom</p>
+      </div>
 
-            <img class="article__header__image" src="./assets/images/avatar-jessica.jpeg" alt="">
-        </header>
+      <img
+        class="avatar"
+        src="/assets/images/avatar-jessica.jpeg"
+        alt="Avatar of Jessica Randall"
+      />
 
-        <section class="article__section">
-            <h2 class="visually-hidden">Social links</h2>
+      <p class="card__bio">"Front-end developer and avid reader."</p>
 
-            <ul class="article__links">
-                <li><a class="button" href="">GitHub</a></li>
-                <li><a class="button" href="">Frontend Mentor</a></li>
-                <li><a class="button" href="">LinkedIn</a></li>
-                <li><a class="button" href="">Twitter</a></li>
-                <li><a class="button" href="">Instagram</a></li>
-            </ul>
-        </section>
-    </article>
-</main>
-</body>
+      <section class="socials">
+        <h2 class="visually-hidden">Links</h2>
+        <ul class="socials__list">
+          <li class="socials__el">
+            <a href="/" class="button">GitHub</a>
+          </li>
+          <li class="socials__el">
+            <a href="/" class="button">Frontend Mentor</a>
+          </li>
+          <li class="socials__el">
+            <a href="/" class="button">LinkedIn</a>
+          </li>
+          <li class="socials__el">
+            <a href="/" class="button">Twitter</a>
+          </li>
+          <li class="socials__el">
+            <a href="/" class="button">Instagram</a>
+          </li>
+        </ul>
+      </section>
+    </main>
+
+    <footer class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">DevGirl_</a>.
+    </footer>
+  </body>
 </html>
