--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <title>Frontend Mentor | Social links profile</title>
 
-    <link rel="stylesheet" href="/styles/app.css" />
+    <link rel="stylesheet" href="./styles/app.css" />
   </head>
   <body>
     <main class="main card">
@@ -25,7 +25,7 @@
 
       <img
         class="avatar"
-        src="/assets/images/avatar-jessica.jpeg"
+        src="./assets/images/avatar-jessica.jpeg"
         alt="Avatar of Jessica Randall"
       />
 
